syntax = "proto3";

package api.user.v1;

option go_package = "blog/api/user/v1;v1";
option java_multiple_files = true;
option java_package = "api.user.v1";

import "google/api/annotations.proto";

service UserService {
    rpc CreateUser (CreateUserRequest) returns (CreateUserReply){
        option (google.api.http)={
          post: "/v1/user/"
          body: "*"
        };
    };
    rpc UpdateUser (UpdateUserRequest) returns (UpdateUserReply){
        option (google.api.http)={
            put: "/v1/user/{id}"
            body: "*"
        };
    };
    rpc DeleteUser (DeleteUserRequest) returns (DeleteUserReply){
        option (google.api.http)={
            delete: "/v1/user/{id}"
        };
    };
    rpc GetUser (GetUserRequest) returns (GetUserReply){
        option (google.api.http)={
            get: "/v1/user/{id}"
        };
    };
    rpc ListUser (ListUserRequest) returns (ListUserReply){
        option (google.api.http)={
            get: "/v1/user"
        };
    };
}
message User{
    int64 id=1;
    string name=2;
    uint32 age=3;
    uint32 sex=4;
}
message CreateUserRequest {
    string name=1;
    uint32 age=2;
    uint32 sex=3;
}
message CreateUserReply {
    User user = 1;
}

message UpdateUserRequest {
    int64 id=1;
    string name=2;
    uint32 age=3;
    uint32 sex=4;
}
message UpdateUserReply {
    User user=1;
}

message DeleteUserRequest {
    int64 id=1;
}
message DeleteUserReply {}

message GetUserRequest {
    int64 id=1;
}
message GetUserReply {
    User user=1;
}

message ListUserRequest {}
message ListUserReply {
    repeated User user=1;
}